--- a/meta-analysis-ui/src/app/app.component.html
+++ b/meta-analysis-ui/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="parent-div">
-    <app-search-bar></app-search-bar>
+    <app-search-component></app-search-component>
     <app-search-results></app-search-results>
 </div>
