Restructred the app

--- a/meta-analysis-ui/src/app/app.component.html
+++ b/meta-analysis-ui/src/app/app.component.html
@@ -1,4 +1,1 @@
-<div class="parent-div">
-    <app-search-component></app-search-component>
-    <app-search-results></app-search-results>
-</div>
+<router-outlet></router-outlet>
