--- a/meta-analysis-ui/src/styles.css
+++ b/meta-analysis-ui/src/styles.css
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+app-login-page {
+    display: grid;
+    justify-content: center;
+}
