--- a/meta-analysis-ui/src/app/home-page/keyword-search-bars/keyword-search-bars.component.html
+++ b/meta-analysis-ui/src/app/home-page/keyword-search-bars/keyword-search-bars.component.html
@@ -17,5 +17,5 @@
             <input type="text" class="search-bar" [formControl]="picoFormGroup.controls.outcomeFormControl">
         </div>
     </div>
-    <button type="submit"> <p>Search</p> <img src="../../../assets/icons8-search-48.png" class="search-icon"> </button>
+    <button type="submit"> <p>Search</p> <img src="../../../assets/search-icon.png" class="search-icon"> </button>
 </form>
