--- a/meta-analysis-ui/src/app/home-page/home-page.component.css
+++ b/meta-analysis-ui/src/app/home-page/home-page.component.css
@@ -1,4 +1,7 @@
 .home-page-div {
-    display: grid;
-    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 900px;
+    align-items: center
 }
