Bootstrap migrate; improved search res display; upload button; search res hyperlink

--- a/meta-analysis-ui/src/app/home-page/home-page.component.css
+++ b/meta-analysis-ui/src/app/home-page/home-page.component.css
@@ -1,7 +1,20 @@
-.home-page-div {
+.home-page-div-res-available{
+    display: grid;
+    justify-items: start;
+}
+
+.home-page-div-res-not-avail {
+    display: grid;
+    justify-items: center;
+}
+
+.spinner-div {
+    margin-top: 1.5em;
+}
+
+.form-elements-div {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    align-items: center;
     justify-content: space-between;
-    height: 900px;
-    align-items: center
 }
