--- a/meta-analysis-ui/src/app/home-page/home-page.component.html
+++ b/meta-analysis-ui/src/app/home-page/home-page.component.html
@@ -1,5 +1,19 @@
-<div class="home-page-div">
-    <app-keyword-search-bars (onSubmitEvent)="startPicoSearch($event)"></app-keyword-search-bars>
-    <app-search-results *ngIf="currentConfig.isSearchResultAvailable"
-    [searchResults]="searchResults"></app-search-results>
-</div>
+<section class="home-page-section">
+    <div [ngClass]="{'home-page-div-res-available' : currentConfig.isSearchResultAvailable,
+    'home-page-div-res-not-avail' : !currentConfig.isSearchResultAvailable}">
+
+        <div class="form-elements-div" [ngClass]="{'col-md-8' : currentConfig.isSearchResultAvailable}">
+            <app-keyword-search-bars (onSubmitEvent)="startPicoSearch($event)"></app-keyword-search-bars>
+            <div class="upload-button-wrapper" *ngIf="currentConfig.isSearchResultAvailable">
+                <button type="submit" (click)="uploadPapers()" class="btn btn-primary">Upload</button>
+            </div>
+        </div>
+        <app-search-results *ngIf="currentConfig.isSearchResultAvailable"
+        [searchResults]="searchResults"></app-search-results>
+        <div class="spinner-div" *ngIf="!currentConfig.isSearchResultAvailable && wasSearchClicked">
+            <div class="spinner-border text-primary" role="status">
+            </div>
+        </div>
+
+    </div>
+</section>
