--- a/meta-analysis-ui/src/app/home-page/keyword-search-bars/keyword-search-bars.component.html
+++ b/meta-analysis-ui/src/app/home-page/keyword-search-bars/keyword-search-bars.component.html
@@ -1,21 +1,23 @@
-<form [formGroup]="picoFormGroup" (ngSubmit)="onSubmit()">
-    <div class="wrapper-div">
-        <div class="search-bar-div">
-            <h3>Population</h3>
-            <input type="text" class="search-bar" [formControl]="picoFormGroup.controls.populationFormControl">
+<section class="pico-search-section">
+    <form [formGroup]="picoFormGroup" (ngSubmit)="onSubmit()">
+        <div class="wrapper-div">
+            <div class="col-md-12">
+                <label class="form-label" for="populationFormControl"><b>Population</b></label>
+                <input type="text" class="form-control" id="populationFormControl" [formControl]="picoFormGroup.controls.populationFormControl">
+            </div>
+            <div class="col-md-12">
+                <label class="form-label" for="interventionFormControl"><b>Intervention</b></label>
+                <input type="text" class="form-control" id="interventionFormControl" [formControl]="picoFormGroup.controls.interventionFormControl">
+            </div>
+            <div class="col-md-12">
+                <label class="form-label" for="comparisonFormControl"><b>Comparison</b></label>
+                <input type="text" class="form-control" id="comparisonFormControl" [formControl]="picoFormGroup.controls.comparisonFormControl">
+            </div>
+            <div class="col-md-12">
+                <label class="form-label" for="outcomeFormControl"><b>Outcome</b></label>
+                <input type="text" class="form-control" id="outcomeFormControl" [formControl]="picoFormGroup.controls.outcomeFormControl">
+            </div>
+            <button type="submit" class="btn btn-primary">Search</button>
         </div>
-        <div class="search-bar-div">
-            <h3>Intervention</h3>
-            <input type="text" class="search-bar" [formControl]="picoFormGroup.controls.interventionFormControl">
-        </div>
-        <div class="search-bar-div">
-            <h3>Comparison</h3>
-            <input type="text" class="search-bar" [formControl]="picoFormGroup.controls.comparisonFormControl">
-        </div>
-        <div class="search-bar-div">
-            <h3>Outcome</h3>
-            <input type="text" class="search-bar" [formControl]="picoFormGroup.controls.outcomeFormControl">
-        </div>
-    </div>
-    <button type="submit"> <p>Search</p> <img src="../../../assets/search-icon.png" class="search-icon"> </button>
-</form>
+    </form>
+</section>
