--- a/meta-analysis-ui/src/app/login-page/login-page.component.css
+++ b/meta-analysis-ui/src/app/login-page/login-page.component.css
@@ -8,7 +8,7 @@
     height: 15em;
     width: 25em;
     background-color: #9c2323;
-    border: 2px solid #000;
+    border: 0.125em solid #000;
     border-radius: 2em;
 }
 
