--- a/meta-analysis-ui/src/app/app.component.html
+++ b/meta-analysis-ui/src/app/app.component.html
@@ -1,4 +1,6 @@
-<header>
-    <h1>Meta Analysis AI</h1>
-</header>
-<router-outlet></router-outlet>
+<section>
+    <header>
+        <h1>Meta Analysis AI</h1>
+    </header>
+    <router-outlet></router-outlet>
+</section>
