--- a/meta-analysis-ui/src/app/home-page/search-results/search-results.component.css
+++ b/meta-analysis-ui/src/app/home-page/search-results/search-results.component.css
@@ -1,4 +1,4 @@
-.search-result {
+.search-result{
     width: 50.25em;
     margin-left: 1.5em;
     margin-top: 1em;
@@ -23,4 +23,9 @@ img {
     height: max-content;
     align-self: center;
     margin-right: 2em;
+}
+
+.available-in-db-indicator {
+    align-self: center;
+    margin-right: 2em
 }
