--- a/meta-analysis-ui/src/app/home-page/search-results/search-results.component.html
+++ b/meta-analysis-ui/src/app/home-page/search-results/search-results.component.html
@@ -1,5 +1,12 @@
 <section class="search-results-section">
     <div class="search-results-wrapper col-12 border border-black border-3">
+        <!-- <div class="header-div">
+            <header>
+                <span><b>Paper</b></span>
+                <span><b>Link</b></span>
+                <span><b>Available in database</b></span>
+            </header>
+        </div> -->
         <div class="search-result p-2 border border-black border-2" *ngFor="let searchResult of searchResults">
             <div class="col-9 p-2">
                 <b>{{ searchResult.title }} - {{ searchResult.year }}</b>
@@ -8,9 +15,13 @@
                 </div>
             </div>
             <div class="link-wrapper">
-                <a [href]="searchResult.url" [title]="'Link to ' + searchResult.title + ' published ' + searchResult.year">
+                <a [href]="searchResult.pdf_link ? searchResult.pdf_link : searchResult.url" [title]="'Link to ' + searchResult.title + ' published ' + searchResult.year">
                     <img src="../../../assets/hyperlink.svg" alt="hyperlink">
                 </a>
+            </div>
+            <div class="available-in-db-indicator">
+                <img [src]="searchResult.available_in_database === 1 ? '../../../assets/available.svg' : '../../../assets/unavailable.svg'"
+                    [title]="'Paper is ' + (searchResult.available_in_database === 0 ? 'not available' : 'available') + ' in the database.'">
             </div>
         </div>
     </div>
