--- a/meta-analysis-ui/src/app/home-page/home-page.component.css
+++ b/meta-analysis-ui/src/app/home-page/home-page.component.css
@@ -12,9 +12,10 @@
     margin-top: 1.5em;
 }
 
-.form-elements-div {
+.home-page-div-res-available .form-elements-div {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    width: -webkit-fill-available;
 }
