Revert "Added error alert"
This reverts commit 48c75a2438a57350a1b6535e3304c73a86de854e.

--- a/meta-analysis-ui/src/app/home-page/home-page.component.html
+++ b/meta-analysis-ui/src/app/home-page/home-page.component.html
@@ -10,13 +10,10 @@
         </div>
         <app-search-results *ngIf="currentConfig.isSearchResultAvailable"
         [searchResults]="searchResults"></app-search-results>
-        <div class="spinner-div" *ngIf="!currentConfig.isSearchResultAvailable && wasSearchClicked && !errorMessage">
+        <div class="spinner-div" *ngIf="!currentConfig.isSearchResultAvailable && wasSearchClicked">
             <div class="spinner-border text-primary" role="status">
             </div>
         </div>
-        <div *ngIf="errorMessage" class="alert alert-danger">
-            Oops! Service isn't currently available.<br>
-            Reason: {{ errorMessage }}
-        </div>
+
     </div>
 </section>
