--- a/meta-analysis-ui/src/app/home-page/home-page.component.css
+++ b/meta-analysis-ui/src/app/home-page/home-page.component.css
@@ -16,6 +16,6 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     width: -webkit-fill-available;
 }
