--- a/meta-analysis-ui/src/app/home-page/home-page.component.html
+++ b/meta-analysis-ui/src/app/home-page/home-page.component.html
@@ -1,19 +1,25 @@
+<!-- //TODO: Remove for prod -->
+<button type="submit" (click)="toggleDevMode()"
+class="btn"
+[ngClass]="{'btn-success': devMode,'btn-danger': !devMode}"
+>Dev mode: {{ devMode }}</button>
+
 <section class="home-page-section">
     <div [ngClass]="{'home-page-div-res-available' : currentConfig.isSearchResultAvailable,
     'home-page-div-res-not-avail' : !currentConfig.isSearchResultAvailable}">
 
         <div class="form-elements-div" [ngClass]="{'col-md-8' : currentConfig.isSearchResultAvailable}">
             <app-keyword-search-bars (onSubmitEvent)="startPicoSearch($event)"></app-keyword-search-bars>
-            <div class="mb-3" *ngIf="currentConfig.isSearchResultAvailable">
-                <input type="file" accept=".pdf" class="form-control" multiple>
-            </div>
         </div>
         <app-search-results *ngIf="currentConfig.isSearchResultAvailable"
         [searchResults]="searchResults"></app-search-results>
-        <div class="spinner-div" *ngIf="!currentConfig.isSearchResultAvailable && wasSearchClicked">
+        <div class="spinner-div" *ngIf="!currentConfig.isSearchResultAvailable && wasSearchClicked && !errorMessage">
             <div class="spinner-border text-primary" role="status">
             </div>
         </div>
-
+        <div *ngIf="errorMessage" class="alert alert-danger">
+            Oops! Service isn't currently available.<br>
+            Reason: {{ errorMessage }}
+        </div>
     </div>
 </section>
