--- a/meta-analysis-ui/src/app/home-page/search-results/search-results.component.html
+++ b/meta-analysis-ui/src/app/home-page/search-results/search-results.component.html
@@ -1,24 +1,30 @@
-<section class="search-results-section">
-    <div class="search-results-wrapper col-15 border border-black border-3">
+<section class="search-results-section w-auto">
+    <div class="search-results-wrapper col-20 border border-black border-3">
+        <header class="container text-center d-flex mt-3">
+            <span class="col-7"><b>Paper</b></span>
+            <span class="col-1"><b>Link</b></span>
+            <span class="col-1 ms-1 me-4"><b>In database?</b></span>
+            <span class="col-2"><b>Add for meta-analysis</b></span>
+        </header>
         <div class="search-result p-2 col-12 border border-black border-2" *ngFor="let searchResult of searchResults">
-            <div class="col-9 p-2">
+            <div class="col-7 p-2">
                 <b>{{ searchResult.title }} - {{ searchResult.year }}</b>
                 <div class="text-truncate col-12 p-2">
                     {{ searchResult.abstract }}
                 </div>
             </div>
-            <div class="link-wrapper">
+            <div class="link-wrapper col-1">
                 <a [href]="searchResult.pdf_link ? searchResult.pdf_link : searchResult.url" [title]="'Link to ' + searchResult.title + ' published ' + searchResult.year">
                     <img src="../../../assets/hyperlink.svg" alt="hyperlink">
                 </a>
             </div>
-            <div class="available-in-db-indicator">
+            <div class="available-in-db-indicator col-1">
                 <img [src]="searchResult.available_in_database === 1 ? '../../../assets/available.svg' : '../../../assets/unavailable.svg'"
                     [title]="'Paper is ' + (searchResult.available_in_database === 0 ? 'not available' : 'available') + ' in the database.'">
             </div>
-            <div class="me-2">
+            <div class="me-2 col-2">
                 <input type="file" accept=".pdf" style="display: none;" id="selectedFile">
-                <input type="button" value="Choose file"
+                <input type="button" value="Add file"
                 class="btn btn-primary btn-sm me-6"
                 [disabled]="searchResult.available_in_database === 0"
                 onclick="document.getElementById('selectedFile').click();"/>
