--- a/meta-analysis-ui/src/app/home-page/home-page.component.html
+++ b/meta-analysis-ui/src/app/home-page/home-page.component.html
@@ -1,8 +1,8 @@
 <!-- //TODO: Remove for prod -->
-<button type="submit" (click)="toggleDevMode()"
+<!-- <button type="submit" (click)="toggleDevMode()"
 class="btn"
 [ngClass]="{'btn-success': devMode,'btn-danger': !devMode}"
->Dev mode: {{ devMode }}</button>
+>Dev mode: {{ devMode }}</button> -->
 
 <section class="home-page-section">
     <div [ngClass]="{'home-page-div-res-available' : currentConfig.isSearchResultAvailable,
