Created second page for filtering search results

--- a/meta-analysis-ui/src/app/app.component.html
+++ b/meta-analysis-ui/src/app/app.component.html
@@ -1,4 +1,4 @@
-<section>
+<section [ngClass]="{'full-width': currentPath.includes('/phase-two')}">
     <header>
         <h1>Meta Analysis AI</h1>
     </header>
