--- a/meta-analysis-ui/src/app/home-page/home-page.component.css
+++ b/meta-analysis-ui/src/app/home-page/home-page.component.css
@@ -19,3 +19,9 @@
     justify-content: center;
     width: -webkit-fill-available;
 }
+
+.upload-all-papers-wrapper {
+    display: flex;
+    width: 100%;
+    justify-content: flex-end;
+}
