--- a/meta-analysis-ui/src/app/app.component.css
+++ b/meta-analysis-ui/src/app/app.component.css
@@ -1,6 +1,6 @@
 header {
-    margin-bottom: 1em;
-    margin-top: 1em;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
     display: grid;
     justify-content: center;
 }
