--- a/meta-analysis-ui/src/app/home-page/post-search/post-search.component.html
+++ b/meta-analysis-ui/src/app/home-page/post-search/post-search.component.html
@@ -1,13 +1,18 @@
-<section class="wrapper-section">
+<section class="container text-center">
+    <div class="col-7">
+        <header>
+            <h6>Meta-analysis AI Assistant is helping you to retrieve the best suitable papers for you using the following selection criteria:</h6>
+        </header>
+    </div>
     <section class="prompts-and-filter">
         <form [formGroup]="promptsFormGroup" class="col-5 d-flex align-items-center flex-column justify-content-between">
             <div class="wrapper-div">
-                <div formArrayName="prompts">
+                <div formArrayName="prompts" class="w-75">
                     <div *ngFor="let promptInput of prompts.controls; let idx = index">
                         <div [formGroupName]="idx" class="col-md-12">
                             <label class="form-label" for="prompt-{{ idx }}"><b>Prompt {{ idx+1 }}</b></label>
                             <div class="prompt-input-wrapper">
-                                <input type="text" class="form-control border border-dark" id="prompt-{{ idx }}" formControlName="prompt" 
+                                <input type="text" class="form-control border border-dark" id="prompt-{{ idx }}" formControlName="prompt"
                                 [placeholder]="predefinedPrompts[idx]">
                                 <button (click)="addPrompt()" *ngIf="prompts.length < maxPrompts">
                                     <img src="../../../assets/add-icon.svg" title="Add prompt">
@@ -20,22 +25,39 @@
                     </div>
                 </div>
             </div>
-            <button type="submit" class="btn btn-primary" (click)="filterSelectedPapers()">Filter</button>
+            <button type="submit" class="btn btn-primary mt-3" (click)="filterSelectedPapers()">Filter</button>
         </form>
-        <div class="col-7">
-            <header>
-                <h4>The following titles will be further filtered.</h4>
+    </section>
+    <section class="container d-flex mt-5">
+        <div class="selected-titles-wrapper mt-5">
+            <header class="text-start">
+                <h5><b>The following titles were selected:</b></h5>
             </header>
-            <div class="selected-titles-wrapper">
-                <div *ngFor="let title of selectedTitles" class="mt-3">
-                    <div class="text-wrap">{{ title }}</div>
-                </div>
+            <div *ngFor="let title of selectedTitles" class="mt-3">
+                <div class="text-wrap">{{ title }}</div>
             </div>
         </div>
-    </section>
-    <section class="container text-center">
-        <div *ngIf="areRecommendationAvailable">
-            Recommendations are available
+        <div *ngIf="areRecommendationAvailable" class="ms-5 table-responsive">
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Title</th>
+                        <th scope="col">Effect size</th>
+                    </tr>
+                </thead>
+                <tbody class="table-group-divider">
+                    <tr *ngFor="let entry of mockEffectSizeList; index as idx">
+                        <th scope="row">{{ idx + 1 }}</th>
+                        <td>{{ entry.title }}</td>
+                        <td>{{ entry.effectSize }}</td>
+                    </tr>
+                    <tr>
+                        <th colspan="2" scope="row">Total</th>
+                        <td>{{ calculateTotalEffectSize() }}</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </section>
 </section>
