--- a/meta-analysis-ui/src/app/home-page/search-results/search-results.component.css
+++ b/meta-analysis-ui/src/app/home-page/search-results/search-results.component.css
@@ -1,8 +1,8 @@
 .search-result{
-    width: 50.25em;
-    margin-left: 1.5em;
-    margin-top: 1em;
-    margin-right: 1em;
+    width: 50.25rem;
+    margin-left: 1.5rem;
+    margin-top: 1rem;
+    margin-right: 1rem;
 
     display: flex;
     flex-direction: row;
@@ -15,28 +15,28 @@
 }
 
 .search-result:last-child {
-    margin-bottom: 1em;
+    margin-bottom: 1rem;
 }
 
 .search-results-wrapper {
     height: 31.25em;
     overflow-y: scroll;
-    margin-top: 1em;
-    margin-bottom: 1em;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 
 img {
-    width: 2em;
-    height: 2em;
+    width: 2rem;
+    height: 2rem;
 }
 
 .link-wrapper {
     height: max-content;
     align-self: center;
-    margin-right: 1em;
+    margin-right: 1rem;
 }
 
 .available-in-db-indicator {
     align-self: center;
-    margin-right: 1em
+    margin-right: 1rem
 }
