Changes were made

--- a/meta-analysis-ui/src/app/home-page/home-page.component.html
+++ b/meta-analysis-ui/src/app/home-page/home-page.component.html
@@ -2,7 +2,7 @@
 <button type="submit" (click)="toggleDevMode()"
 class="btn"
 [ngClass]="{'btn-success': devMode,'btn-danger': !devMode}"
->Dev mode: {{ devMode }}</button>
+>Demo mode: {{ devMode }}</button>
 
 <section class="home-page-section">
     <div [ngClass]="{'home-page-div-res-available' : currentConfig.isSearchResultAvailable,
