--- a/meta-analysis-ui/src/app/home-page/post-search/post-search.component.css
+++ b/meta-analysis-ui/src/app/home-page/post-search/post-search.component.css
@@ -40,6 +40,8 @@ button:not(.btn-primary) {
     overflow-y: auto;
     margin-top: 1rem;
     margin-bottom: 1rem;
+
+    /* min-width: 112.5rem !important; */
 }
 
 .btn-primary {
