--- a/meta-analysis-ui/src/app/home-page/search-results/search-results.component.html
+++ b/meta-analysis-ui/src/app/home-page/search-results/search-results.component.html
@@ -4,7 +4,7 @@
         <header class="container text-center d-flex mt-3">
             <span class="col-7"><b>Paper</b></span>
             <span class="col-1"><b>Link</b></span>
-            <span class="col-1 ms-1 me-4"><b>In database?</b></span>
+            <span class="col-1 ms-1 me-4"><b>In my folder?</b></span>
             <span class="col-2"><b>Add for meta-analysis</b></span>
         </header>
         <div class="search-result p-2 col-12 border border-black border-2" *ngFor="let searchResult of searchResults; index as idx">
