--- a/meta-analysis-ui/src/app/home-page/post-search/post-search.component.html
+++ b/meta-analysis-ui/src/app/home-page/post-search/post-search.component.html
@@ -1,17 +1,17 @@
-<section class="container text-center">
+<section class="container text-center d-flex align-items-center flex-column">
     <div class="col-7">
         <header>
             <h6>Meta-analysis AI Assistant is helping you to retrieve the best suitable papers for you using the following selection criteria:</h6>
         </header>
     </div>
-    <section class="prompts-and-filter">
+    <section class="prompts-and-filter d-flex justify-content-center w-100">
         <form [formGroup]="promptsFormGroup" class="col-5 d-flex align-items-center flex-column justify-content-between">
-            <div class="wrapper-div">
+            <div class="wrapper-div d-flex justify-content-center align-items-center">
                 <div formArrayName="prompts" class="w-75">
                     <div *ngFor="let promptInput of prompts.controls; let idx = index">
                         <div [formGroupName]="idx" class="col-md-12">
                             <label class="form-label" for="prompt-{{ idx }}"><b>Prompt {{ idx+1 }}</b></label>
-                            <div class="prompt-input-wrapper">
+                            <div class="d-flex">
                                 <input type="text" class="form-control border border-dark" id="prompt-{{ idx }}" formControlName="prompt"
                                 [placeholder]="predefinedPrompts[idx]">
                                 <button (click)="addPrompt()" *ngIf="prompts.length < maxPrompts">
@@ -25,20 +25,24 @@
                     </div>
                 </div>
             </div>
-            <button type="submit" class="btn btn-primary mt-3" (click)="filterSelectedPapers()">Filter</button>
+            <button type="submit" class="btn btn-primary mt-3 w-25" (click)="filterSelectedPapers()">Filter</button>
         </form>
     </section>
 </section>
-<section class="container d-flex mt-5 mx-2 justify-content-between" style="min-width: 112.5rem;">
-    <div class="selected-titles-wrapper mt-5">
-        <header class="text-start">
-            <h5><b>The following titles were selected:</b></h5>
-        </header>
-        <div *ngFor="let title of selectedTitles" class="mt-3">
-            <div class="text-wrap">{{ title }}</div>
+<section class="container d-flex mt-5 mx-2 justify-content-between flex-wrap align-items-center" style="max-width: 112.5rem;">
+    <div class="selected-titles-wrapper mt-5 me-5 d-flex flex-column">
+        <div class="sticky-top">
+            <header class="text-start">
+                <h5><b>The following titles were selected:</b></h5>
+            </header>
+        </div>
+        <div class=" overflow-y-auto">
+            <div *ngFor="let title of selectedTitles" class="mt-3">
+                <div class="text-wrap">{{ title }}</div>
+            </div>
         </div>
     </div>
-    <div *ngIf="areRecommendationAvailable" class="ms-5 table-responsive">
+    <div *ngIf="areRecommendationAvailable" class="table-responsive">
         <table class="table table-striped">
             <thead>
                 <tr>
@@ -51,13 +55,16 @@
                 <tr *ngFor="let entry of mockEffectSizeList; index as idx">
                     <th scope="row">{{ idx + 1 }}</th>
                     <td>{{ entry.title }}</td>
-                    <td>{{ entry.effectSize }}</td>
+                    <td>{{ entry.effectSize | number:'.5' }}</td>
                 </tr>
                 <tr>
                     <th colspan="2" scope="row">Average effect size</th>
-                    <td>{{ calculateAvgEffectSize() }}</td>
+                    <td>{{ calculateAvgEffectSize() | number:'.5' }}</td>
                 </tr>
             </tbody>
         </table>
     </div>
+</section>
+<section class="container text-center d-flex align-items-center flex-column">
+
 </section>
