FInal set of chnages before demo

--- a/meta-analysis-ui/src/app/app.component.html
+++ b/meta-analysis-ui/src/app/app.component.html
@@ -1,6 +1,6 @@
 <section [ngClass]="{'full-width': currentPath.includes('/phase-two')}">
     <header>
-        <h1>Meta Analysis AI</h1>
+        <h1>Meta Analysis AI Assistant</h1>
     </header>
     <router-outlet></router-outlet>
 </section>
