--- a/meta-analysis-ui/src/app/home-page/post-search/post-search.component.html
+++ b/meta-analysis-ui/src/app/home-page/post-search/post-search.component.html
@@ -29,21 +29,21 @@
         </form>
     </section>
 </section>
-<section class="container d-flex mt-5 mx-2 justify-content-between flex-wrap align-items-center" style="max-width: 112.5rem;">
-    <div class="selected-titles-wrapper mt-5 me-5 d-flex flex-column">
-        <div class="sticky-top">
+<section class="container d-flex mt-5 mx-2 justify-content-center flex-wrap align-items-center" style="max-width: 112.5rem;">
+    <div class="selected-titles-wrapper mt-5 me-5 d-flex flex-column border border-2 border-dark">
+        <div class="sticky-top m-3">
             <header class="text-start">
                 <h5><b>The following titles were selected:</b></h5>
             </header>
         </div>
-        <div class=" overflow-y-auto">
+        <div class=" overflow-y-auto m-3">
             <div *ngFor="let title of selectedTitles" class="mt-3">
                 <div class="text-wrap">{{ title }}</div>
             </div>
         </div>
     </div>
-    <div *ngIf="areRecommendationAvailable" class="table-responsive">
-        <table class="table table-striped">
+    <div *ngIf="areRecommendationAvailable" class="table-responsive mt-4 pt-1">
+        <table class="table table-striped table-bordered border border-2 border-dark">
             <thead>
                 <tr>
                     <th scope="col">#</th>
@@ -64,7 +64,16 @@
             </tbody>
         </table>
     </div>
+    <div style="min-width: 112.5rem;" class="d-flex justify-content-center">
+        <button type="submit"
+        class="btn btn-primary mt-3 ms-2 w-10"
+        (click)="updateDisplaySummary()" *ngIf="areRecommendationAvailable">Get results?</button>
+    </div>
 </section>
-<section class="container text-center d-flex align-items-center flex-column">
+<section class="container text-center d-flex align-items-center flex-column mt-5 text-wrap" *ngIf="displaySummary">
+    <div>
+        The pooled effect size across the studies is approximately 0.27, which suggests a very small to negligible overall effect when combining the results.
 
+        This outcome highlights variability in the effectiveness of adaptive learning systems across different contexts, with some studies showing a positive impact and others indicating minimal or even negative differences between experimental and control conditions. You can check further the variances within studies to infer more useful insights.
+    </div>
 </section>
